# Hybrid-Retrieval-Document-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
demo_data/: cpu_notes.md  eval.json  rag_overview.md
src/modern_rag/: __init__.py  api.py  chunking.py  cli.py  config.py  embeddings.py  evaluation.py  llm.py  loaders.py  models.py  pipeline.py  retrieval.py  store.py
src/modern_rag/web/: app.js  index.html  styles.css
tests/: test_api.py  test_chunking.py  test_evaluation.py  test_llm.py  test_loaders.py  test_retrieval.py  test_store.py
