[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-rag-cpu"
version = "0.1.0"
description = "A CPU-friendly modern RAG starter with hybrid retrieval and a FastAPI interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "numpy>=1.26.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "pypdf>=5.0.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.3.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
modern-rag = "modern_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modern_rag = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
